# nci

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  conanfile.py  index.md
cmake/: utils.cmake
docs/: Home.md  _config.yml  general.md  index.md  inputs.md  ncurses.md  troubleshooting.md  widgets.md
docs/references/: websites.md
docs/widgets/: frames.md  imanager.md
docs/widgets/basics/: buttons.md  image.md  progressbar.md  textframe.md
docs/widgets/basics/buttons/: button.md  radiobutton.md  switchbutton.md  togglebutton.md
docs/widgets/complex/: books.md
docs/widgets/compound/: popups.md
docs/widgets/compound/popups/: popup.md
modules/: README.md
modules/nci/include/: alertPopup.h  button.h  frame.h  frameContainer.h  imanager.h  keybindingContainer.h  nci.h  popup.h  textFrame.h  types.h  utils.h  virtualFrame.h
modules/nci/src/: alertPopup.cpp  button.cpp  frame.cpp  frameContainer.cpp  imanager.cpp  keybindingContainer.cpp  nci.cpp  popup.cpp  textFrame.cpp  utils.cpp
samples/business_management/manage_elements/src/: main.cpp
samples/buttons/single_button/: CMakeLists.txt
samples/buttons/single_button/src/: main.cpp
samples/frames/: CMakeLists.txt
samples/frames/box_frame/: CMakeLists.txt
samples/frames/box_frame/src/: main.cpp
samples/frames/constraint_children/: CMakeLists.txt
samples/frames/constraint_children/src/: main.cpp
samples/frames/draw_frames/src/: main.cpp
samples/frames/src/: main.cpp
samples/info/: CMakeLists.txt
samples/input/: CMakeLists.txt
samples/input/basic/: .gitignore  CMakeLists.txt
samples/input/basic/src/: main.cpp
samples/keybinding/: CMakeLists.txt
samples/keybinding/keys_ids/: CMakeLists.txt
samples/keybinding/keys_ids/src/: main.cpp
samples/keybinding/special_keys_ids/: CMakeLists.txt
samples/keybinding/src/: main.cpp
samples/keybinding/usage/src/: main.cpp
samples/ncurses_examples/: CMakeLists.txt
samples/ncurses_examples/1_hello_world/: CMakeLists.txt
samples/ncurses_examples/1_hello_world/src/: main.cpp
samples/ncurses_examples/2_input/: CMakeLists.txt
samples/ncurses_examples/3_box/: CMakeLists.txt
samples/ncurses_examples/3_box/src/: main.cpp
samples/ncurses_examples/4_writing/: CMakeLists.txt
samples/ncurses_examples/4_writing/src/: main.cpp
samples/ncurses_examples/test/: CMakeLists.txt
samples/ncurses_examples/test/src/: main.cpp
samples/popups/: CMakeLists.txt
samples/popups/alert/: CMakeLists.txt
samples/popups/frame_popup/src/: main.cpp
samples/popups/simple/: CMakeLists.txt
samples/popups/simple/src/: main.cpp
samples/popups/src/: main.cpp
samples/text/: CMakeLists.txt
samples/text/edit/: CMakeLists.txt
samples/text/edit/src/: main.cpp
samples/text/in_frames/src/: main.cpp
samples/text/src/: main.cpp
sources/: CMakeLists.txt  CPPLINT.cfg  README.md
sources/cmake/: utils.cmake
sources/modules/: CMakeLists.txt
sources/modules/nci/: CMakeLists.txt
sources/modules/nci/include/: textFrame.h
sources/modules/nci/src/: imanager.cpp
sources/nci/: CMakeLists.txt
sources/nci/include/: alertPopup.h  frame.h  frameContainer.h  imanager.h  popup.h
sources/nci/src/: alertPopup.cpp  button.cpp  imanager.cpp  nci.cpp  utils.cpp
sources/samples/: CMakeLists.txt
sources/samples/business_management/manage_elements/: CMakeLists.txt
sources/samples/buttons/: CMakeLists.txt
sources/samples/buttons/single_button/: CMakeLists.txt
sources/samples/buttons/single_button/src/: main.cpp
sources/samples/frames/box_frame/: CMakeLists.txt
sources/samples/frames/constraint_children/: CMakeLists.txt  main.cpp
sources/samples/frames/draw_frames/: CMakeLists.txt
sources/samples/info/: CMakeLists.txt  main.cpp
sources/samples/input/basic/: CMakeLists.txt
sources/samples/keybinding/keys_ids/: CMakeLists.txt
sources/samples/keybinding/special_keys_ids/: CMakeLists.txt
sources/samples/keybinding/special_keys_ids/src/: main.cpp
sources/samples/keybinding/usage/: CMakeLists.txt
sources/samples/ncurses_examples/: CMakeLists.txt
sources/samples/ncurses_examples/1_hello_world/: CMakeLists.txt
sources/samples/ncurses_examples/2_input/: CMakeLists.txt
sources/samples/ncurses_examples/2_input/src/: main.cpp
sources/samples/ncurses_examples/3_box/: CMakeLists.txt
sources/samples/ncurses_examples/4_writing/: CMakeLists.txt
sources/samples/ncurses_examples/template/: CMakeLists.txt
sources/samples/ncurses_examples/test/: CMakeLists.txt
sources/samples/popups/alert/: CMakeLists.txt  main.cpp
sources/samples/popups/frame_popup/: CMakeLists.txt  main.cpp
sources/samples/popups/simple/: CMakeLists.txt  main.cpp
sources/samples/text/edit/: CMakeLists.txt
sources/samples/text/in_frames/: CMakeLists.txt
sources/samples/text/select_frame/: CMakeLists.txt  main.cpp
sources/tests/: CMakeLists.txt  tests_base.cpp
tests/: CMakeLists.txt  main.cpp  test_utils.h
tests/test_frames/: CMakeLists.txt  test_text.cpp
